CSV: Use system identity-based hashcodes (fixes #180) (#185)